[package]
name = "sbp-web-viewer"
version = "0.1.0"
authors = ["Sam Lewis"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2.74", features = ["serde-serialize"] }
sbp2report = { git = "ssh://git@github.com/swift-nav/ICBINS.git", rev = "f9067edada97602025ccac2a38068854a127acf7" }
console_error_panic_hook = "0.1.6"
sbp = { git = "https://github.com/swift-nav/libsbp.git", rev = "9219af3667c306f593ce774e053416eebbc86987" }
serde = { version = "1.0", features = ["derive"] }

[dependencies.getrandom]
features = ["js"]

[profile.release]
lto = true